--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ WORKER_CONTAINER_NAME=ckan-worker
 
 # Host Ports
 CKAN_PORT_HOST=5000
-NGINX_PORT_HOST=81
+NGINX_PORT_HOST=80
 NGINX_SSLPORT_HOST=8443
 
 # CKAN databases
@@ -30,21 +30,21 @@ TEST_CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@db/datastore_te
 # CKAN core
 CKAN_VERSION=2.10.0
 CKAN_SITE_ID=default
-CKAN_SITE_URL=https://localhost:8443
+CKAN_SITE_URL=http://10.80.14.18
 CKAN_PORT=5000
 CKAN_PORT_HOST=5000
 CKAN___BEAKER__SESSION__SECRET=CHANGE_ME
 # See https://docs.ckan.org/en/latest/maintaining/configuration.html#api-token-settings
 CKAN___API_TOKEN__JWT__ENCODE__SECRET=string:CHANGE_ME
 CKAN___API_TOKEN__JWT__DECODE__SECRET=string:CHANGE_ME
-CKAN_SYSADMIN_NAME=ckan_admin
-CKAN_SYSADMIN_PASSWORD=test1234
-CKAN_SYSADMIN_EMAIL=your_email@example.com
+CKAN_SYSADMIN_NAME=matheus
+CKAN_SYSADMIN_PASSWORD=naruto
+CKAN_SYSADMIN_EMAIL=matheushmenezes@prefeitura.sp.gov.br
 CKAN_STORAGE_PATH=/var/lib/ckan
 CKAN_SMTP_SERVER=smtp.corporateict.domain:25
 CKAN_SMTP_STARTTLS=True
-CKAN_SMTP_USER=user
-CKAN_SMTP_PASSWORD=pass
+CKAN_SMTP_USER=matheus
+CKAN_SMTP_PASSWORD=naruto
 CKAN_SMTP_MAIL_FROM=ckan@localhost
 TZ=UTC
 
